<resources>
    <string name="app_name">StoreIt</string>
    <string name="login_popup_title">Login</string>
    <string name="login_txt_email_hint">enter email</string>
    <string name="login_txt_pass_hint">enter password</string>
    <string name="login_btn_signin">sign in</string>
    <string name="btn_register">register</string>
    <string name="error_txt_title">An Error Occurred</string>
    <string name="btn_generic_ok">ok</string>
    <string name="error_btn_retry">retry</string>
    <string name="filter_products_popup_txt_text">filter text</string>
    <string name="btn_generic_cancel">cancel</string>
    <string name="filter_products_btn_filter">filter</string>
    <string name="filter_products_btn_clear">clear</string>
    <string name="btn_generic_back">back</string>
    <string name="generic_no_results">No Results Found</string>
    <string name="dollar_sign">$</string>
    <string name="products_details_popup_btn_delete">disable</string>
    <string name="products_details_popup_btn_save">save</string>
    <string name="products_details_popup_btn_reset">reset</string>
    <string name="products_details_popup_txt_title_hint">title…</string>
    <string name="products_details_popup_txt_price_hint">price…</string>
    <string name="products_details_popup_txt_desc_hint">description…</string>
    <string name="products_details_popup_txt_categories_hint">categories…</string>
    <string name="permission_denied_message">Action cannot be completed without user permission</string>
    <string name="load_image_error">error loading image</string>
    <string name="categories_picker_txt_new_hint">new category…</string>
    <string name="btn_generic_add">add</string>
    <string name="profile_switch_admin_mode">administration mode</string>
    <string name="error_check_internet">Please check your internet connection.</string>
    <string name="profile_btn_logout">logout</string>
    <string name="register_txt_title">Registration</string>
    <string name="user_details_txt_fname_hint">first name…</string>
    <string name="user_details_txt_lname_hint">last name…</string>
    <string name="user_details_txt_email_hint">email…</string>
    <string name="user_details_txt_pass_hint">password…</string>
    <string name="user_details_txt_pass2_hint">confirm password…</string>
    <string name="user_details_txt_phone_hint">phone number…</string>
    <string name="user_details_txt_address_hint">address…</string>
    <string name="order_summary_btn_details">details</string>
    <string name="generic_search">search</string>
    <string name="orders_txt_userid_hint">user id</string>
    <string name="invalid_search_user_id">invalid user id</string>
    <string name="total_price_prefix">total:</string>
    <string name="order_number_prefix">Order #</string>
    <string name="cart_btn_clear">clear</string>
    <string name="cart_btn_checkout">checkout</string>
    <string name="checkout_txt_credit_card_hint">credit card number…</string>
    <string name="checkout_txt_expiration_hint">expiration…</string>
    <string name="checkout_txt_cvv_hint">CVV…</string>
    <string name="profile_btn_edit">Edit Details</string>
    <string name="profile_btn_save">save</string>
    <string name="order_complete_title">Your Order Number</string>
    <string name="profile_update_complete">Update Complete</string>
    <string name="admin_create_user_title">Create New User</string>
    <string name="admin_create_user_is_admin">administrator</string>
    <string name="admin_invalidate_token">Invalidate User Token</string>
    <string name="admin_create_user_create">create</string>
    <string name="admin_create_user_clear">clear</string>
    <string name="admin_invalidate_token_txt_userid">user id</string>
    <string name="admin_invalidate_token_btn_invalidate">invalidate</string>
    <string name="admin_invalidate_token_success">Token Invalidated</string>
    <string name="admin_create_user_success">User Created</string>
    <string name="error_access_denied">you don\'t have access to this feature</string>
    <string name="error_user_already_exists">A user with the given credentials already exists</string>
    <string name="error_user_doesnt_exist">no user found for the given credentials</string>
    <string name="error_user_credential_mismatch">one or more of the given credentials don\'t match</string>
    <string name="error_product_with_no_categories">a product must belong to at least one category</string>
    <string name="error_no_product_found">no matching product found</string>
    <string name="error_no_order_found">no matching order found</string>
    <string name="error_no_user_found">no matching user found</string>
    <string name="error_product_disabled_or_too_few">one or more of the selected products is no longer available</string>
    <string name="error_empty_order">an order must contain at least one products</string>
    <string name="error_credit_declined">your credit card was declined</string>
    <string name="error_validation_product_title_empty">title must be filled in</string>
    <string name="error_validation_product_title_invalid">title is not valid</string>
    <string name="error_validation_product_desc_invalid">description is not valid</string>
    <string name="error_validation_product_price_invalid">price must be filled in and positive</string>
    <string name="error_validation_product_categories_empty">at least one category must be selected</string>
    <string name="error_validation_product_stock_empty">stock must be filled in</string>
    <string name="error_validation_user_info_email_empty">email must be filled in</string>
    <string name="error_validation_user_info_email_invalid">email is not valid</string>
    <string name="error_validation_user_info_pass_empty">password must be filled in</string>
    <string name="error_validation_user_info_pass2_empty">password confirmation must be filled in</string>
    <string name="error_validation_user_info_pass_mismatch">passwords do not match</string>
    <string name="error_validation_user_info_pass_invalid">passwords must be at least 8 characters containing at least one letter and one number</string>
    <string name="error_validation_user_info_fname_empty">first name must be filled in</string>
    <string name="error_validation_user_info_fname_invalid">first name is not valid</string>
    <string name="error_validation_user_info_lname_empty">last name must be filled in</string>
    <string name="error_validation_user_info_lname_invalid">last name is not valid</string>
    <string name="error_validation_user_info_phone_empty">phone number must be filled in</string>
    <string name="error_validation_user_info_phone_invalid">phone number is not valid</string>
    <string name="error_validation_user_info_address_empty">address must be filled in</string>
    <string name="error_validation_user_info_address_invalid">address is not valid</string>
    <string name="error_validation_category_title_empty">category title must be filled in</string>
    <string name="error_validation_category_title_invalid">category title is not valid</string>
</resources>