<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/standard_spacing"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/text_color_dark"
        android:text="@string/login_popup_title"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/login_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_text_size"
        android:textAlignment="center"
        android:textColor="@color/text_color_dark"
        android:hint="@string/login_txt_email_hint"
        android:layout_marginTop="@dimen/standard_separating_margin"/>

    <EditText
        android:id="@+id/login_txt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="@dimen/standard_text_size"
        android:textColor="@color/title_color"
        android:hint="@string/login_txt_pass_hint"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/standard_separating_margin"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:backgroundTint="@color/standard_btn_bg"
                android:id="@+id/login_btn_signin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/login_btn_signin"
                android:layout_marginEnd="@dimen/standard_separating_margin"/>

            <Button
                android:backgroundTint="@color/standard_btn_bg"
                android:id="@+id/login_btn_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_register"
                android:layout_marginStart="@dimen/standard_separating_margin"/>

        </LinearLayout>

</LinearLayout>