<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_invalidate_token"
        android:textColor="@color/title_color"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/standard_separating_margin">

        <EditText
            android:id="@+id/admin_invalidate_token_txt_userid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/admin_invalidate_token_txt_userid"
            android:textSize="@dimen/standard_text_size"/>

        <Button
            android:id="@+id/admin_invalidate_token_btn_invalidate"
            android:backgroundTint="@color/standard_btn_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/admin_invalidate_token_btn_invalidate"
            android:layout_margin="@dimen/standard_separating_margin"/>

    </LinearLayout>

</LinearLayout>