<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/standard_spacing">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/orders_admin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            >

            <EditText
                android:id="@+id/orders_txt_userid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/orders_txt_userid_hint"
                android:textSize="@dimen/standard_text_size"
                />

            <Button
                android:id="@+id/orders_btn_search_user"
                android:backgroundTint="@color/standard_btn_bg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/generic_search"
                />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orders_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/orders_txt_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/standard_text_size"
        android:text="@string/generic_no_results"
        android:visibility="gone"/>
</FrameLayout>