<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/cart_txt_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standard_text_size"
            android:textAlignment="center"
            tools:text="total: $333.33"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cart_btn_clear"
                android:backgroundTint="@color/standard_btn_bg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/standard_separating_margin"
                android:text="@string/cart_btn_clear"
                />

            <Button
                android:id="@+id/cart_btn_checkout"
                android:backgroundTint="@color/standard_btn_bg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/standard_separating_margin"
                android:text="@string/cart_btn_checkout"
                />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/cart_txt_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/standard_text_size"
        android:text="@string/generic_no_results"
        android:visibility="gone"/>

</FrameLayout>