<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/standard_spacing">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_filter"
        android:layout_gravity="center"
        app:tint="@color/filter_icon_tint"
        />

    <EditText
        android:id="@+id/filter_products_txt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_text_size"
        android:textAlignment="center"
        android:hint="@string/filter_products_popup_txt_text"
        android:layout_marginTop="@dimen/standard_separating_margin"/>

    <Spinner
        android:id="@+id/filter_products_spinner_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_separating_margin"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/filter_products_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/filter_products_btn_cancel"
                android:layout_margin="@dimen/standard_separating_margin"/>

            <Button
                android:id="@+id/filter_products_btn_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/filter_products_btn_filter"
                android:layout_margin="@dimen/standard_separating_margin"/>

            <Button
                android:id="@+id/filter_products_btn_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/filter_products_btn_clear"
                android:layout_margin="@dimen/standard_separating_margin"/>

        </LinearLayout>

</LinearLayout>